Inclusão de projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,17 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>RocketNews</title>
 </head>
+
 <body>
     <main>
-        <section id="logo">
+        <header id="logo">
             <img src="assets/img/logo.svg" alt="Logo da RocketNews">
-        </section>
+        </header>
         <section id="content">
             <h2>Atualize ideias e informações em 5 minutos</h2>
             <h3>Tudo que você precisa saber para começar o seu dia bem informado</h3>
-            <p>Notícias sobre o universo Rocketseat e tudo o que precisa para começar o dia melhor. Perfeito para se preparar para coda.</p>
+            <p>Notícias sobre o universo Rocketseat e tudo o que precisa para começar o dia melhor. Perfeito para se
+                preparar para coda.</p>
         </section>
         <section id="form">
             <form action="">
@@ -25,27 +28,16 @@
                 <button>
                     <img src="assets/img/send.svg" alt="Avião de papel">
                 </button>
-                <p>Deixe-me ler primeiro</p>
             </form>
-            
-            <img src="assets/img/arrow-right.svg" alt="Seta apontando para a direita">
         </section>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <section id="read-news">
-            <img src="assets/img/read_news.jpg" alt="Pessoa interagindo com o notebook" width="200px" height="200px">
+        <section id="link">
+            <a>Deixe-me ler primeiro</a>
+            <span>
+                <img src="assets/img/arrow-right.svg" alt="Seta apontando para a direita" id="arrow">
+            </span>
         </section>
     </main>
+  
 </body>
+
 </html>
