--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
                 <img src="assets/img/arrow-right.svg" alt="Seta apontando para a direita" id="arrow">
             </span>
         </section>
+        <aside>
+            <img src="assets/img/read_news.jpg" alt="">
+        </aside>
     </main>
-  
+    
 </body>
 
 </html>
